--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -935,7 +935,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -1321,6 +1323,7 @@ section {
   overflow: hidden;
   border-right: 3px solid #454035;
   border-bottom: 3px solid #454035;
+  
 }
 
 .gallery .gallery-item img {
@@ -1422,7 +1425,13 @@ section {
 .contact .info {
   width: 100%;
 }
+.map {
+  width: fit-content;
+  height: 400;
+  margin: 0 auto;
+  align-items: center;
 
+}
 .contact .info i {
   font-size: 20px;
   float: left;
