Fixed challenge with the images in the gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1328,6 +1328,8 @@ section {
 
 .gallery .gallery-item img {
   transition: all ease-in-out 0.4s;
+  width: 500px;
+  height: 300px;
 }
 
 .gallery .gallery-item:hover img {
